# rope-vscode-ext

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  package.json  pnpm-lock.yaml
python/: pyproject.toml  rope_runner.py
src/: extension.ts
tests/fixtures/project1/: file1.py  file2.py
