[tool.poetry]
name = "rope-vscode-subprocess"
version = "0.1.0"
description = ""
authors = ["David McNamee <david@mcnamee.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rope = "^1.13.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
